# discord-bot

./: .editorconfig  .env.example  CONTRIBUTING.md  README.md  config-example.toml  justfile  pyproject.toml
.github/workflows/: ci.yml
app/: __main__.py  bot.py  config.py  core.py  log.py  setup.py  status.py
app/common/: hooks.py  linker.py  message_moving.py
app/common/message_moving/: __init__.py  conversion.py  moved_message.py  subtext.py  webhooks.py
app/components/: __init__.py  accept_invite.py  activity_status.py  autoclose.py  close_help_post.py  developer.py  docs.py  fixup.py  fixup_embeds.py  hcb_feed.py  lock_old_posts.py  message_filter.py  move_message.py  xkcd_mentions.py  zig_codeblocks.py
app/components/entity_mentions/: __init__.py  cache.py  code_links.py  fmt.py  integration.py  resolution.py
app/components/github_integration/: __init__.py  code_links.py  commit_links.py  commit_types.py  commits.py  models.py
app/components/github_integration/comments/: discussions.py  fetching.py  integration.py
app/components/github_integration/entities/: cache.py  discussions.py  fmt.py  integration.py  resolution.py
app/components/github_integration/mentions/: integration.py  resolution.py
app/components/github_integration/webhooks/: commits.py  core.py  discussions.py  integration.py  issues.py  prs.py  review_summary.py  utils.py  vouch.py
app/features/: __init__.py  threads.py
app/utils/: __init__.py  hooks.py  message_data.py  webhooks.py
tests/: test_close_help_post.py  test_message_moving.py  test_meta.py  test_utils.py
tests/fixtures/: hooks.py
tests/hooks/: test_delete_hook.py  test_edit_hook.py  test_message_linker.py
tests/utils/: __init__.py  config.py  kitposer.py
tests/webhooks/: test_discussions.py  test_issues.py  test_prs.py  test_review_summary.py  test_utils.py  test_vouch.py  utils.py
