[project]
name = "ghostty-bot"
version = "0.1.0"
description = ""
readme = "README.md"
license = "MIT"
requires-python = ">=3.14"
authors = [
  { name = "Mitchell Hashimoto", email = "m@mitchellh.com" },
  { name = "trag1c", email = "dev@jakubr.me" },
]
dependencies = [
  "toolbox",
  "discord-py>=2.6.3",
  "githubkit>=0.14.0",
  "pydantic>=2.11.7,<3",
  "sentry-sdk>=2.36",
  "zig-codeblocks>=0.3.3",
  "httpx>=0.28.1",
  "monalisten>=0.3.2",
  "pydantic-settings>=2.10.1,<3",
  "loguru>=0.7.0",
  "msgpack>=1.1",
]

[dependency-groups]
dev = [
  "ruff>=0.14.10",
  "basedpyright>=1.36.2",
  "taplo>=0.9.3",
  "pytest>=9.0.2",
  "hypothesis>=6.148.9",
  "anyio>=4.12.0",
  "msgpack-types>=0.5",
]

[tool.uv.sources]
toolbox.workspace = true

[tool.uv.workspace]
members = ["packages/*"]

[build-system]
requires = ["uv_build>=0.9.17,<0.10"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "app"
module-root = ""

[tool.basedpyright]
enableBasedFeatures = true
reportAny = false
reportExplicitAny = false
reportImplicitStringConcatenation = false
reportInvalidCast = false
reportUnusedCallResult = false
reportUnknownLambdaType = false

[tool.pytest.ini_options]
pythonpath = "."
anyio_mode = "auto"
filterwarnings = ["ignore::Warning"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "COM",
  "D",
  "ERA",
  "FIX",
  "S",
  "ANN401",
  "ISC001",
  "PLE1205",
  "PLE1206",
  "PLR2004",
  "TD003",
  "TRY400",
]
logger-objects = ["loguru.logger"] # technically false but it works well enough
mccabe.max-complexity = 20
pylint.max-branches = 20
pylint.max-returns = 15
isort.known-local-folder = ["app", "toolbox"]

[tool.ruff.format]
preview = true

[tool.ruff.lint.flake8-import-conventions.aliases]
discord = "dc"
datetime = "dt"

[tool.ruff.lint.flake8-type-checking]
strict = true
runtime-evaluated-base-classes = [
  "pydantic.BaseModel",
  "pydantic_settings.BaseSettings",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["FBT", "SLF001"]
